Revert "8338411: Implement JEP 486: Permanently Disable the Security Manager"
This reverts commit db85090553ab14a84c3ed0a2604dd56c5b6e6982.