@@ -71,6 +71,7 @@ public class LogGeneratedClassesTest {
         scratch.add("        int foo();");
         scratch.add("    }");
         scratch.add("    public static void main(String[] args) {");
+        scratch.add("        System.setSecurityManager(new SecurityManager());");
         scratch.add("        I lam = () -> 10;");
         scratch.add("        Runnable r = () -> {");
         scratch.add("            System.out.println(\"Runnable\");");
@@ -116,6 +117,7 @@ public class LogGeneratedClassesTest {
     public void testNotLogging() throws Exception {
         ProcessBuilder pb = createLimitedTestJavaProcessBuilder(
                                "-cp", CLASSES.toString(),
+                               "-Djava.security.manager=allow",
                                "com.example.TestLambda");
         executeProcess(pb).shouldHaveExitValue(0);
     }
@@ -127,6 +129,7 @@ public class LogGeneratedClassesTest {
         Files.createDirectory(testDir);
         ProcessBuilder pb = createLimitedTestJavaProcessBuilder(
                                "-cp", CLASSES.toString(),
+                               "-Djava.security.manager=allow",
                                "-Djdk.invoke.LambdaMetafactory.dumpProxyClassFiles",
                                "com.example.TestLambda").directory(testDir.toFile());
         executeProcess(pb).shouldHaveExitValue(0);
@@ -150,6 +153,7 @@ public class LogGeneratedClassesTest {
 
         ProcessBuilder pb = createLimitedTestJavaProcessBuilder(
                                 "-cp", CLASSES.toString(),
+                                "-Djava.security.manager=allow",
                                 "-Djdk.invoke.LambdaMetafactory.dumpProxyClassFiles",
                                 "com.example.TestLambda").directory(testDir.toFile());
         executeProcess(pb).shouldHaveExitValue(0);
@@ -172,6 +176,7 @@ public class LogGeneratedClassesTest {
         assertTrue(Files.isRegularFile(dumpFile));
         ProcessBuilder pb = createLimitedTestJavaProcessBuilder(
                                 "-cp", CLASSES.toString(),
+                                "-Djava.security.manager=allow",
                                 "-Djdk.invoke.LambdaMetafactory.dumpProxyClassFiles",
                                 "com.example.TestLambda").directory(testDir.toFile());
         executeProcess(pb)
@@ -229,6 +234,7 @@ public class LogGeneratedClassesTest {
 
             ProcessBuilder pb = createLimitedTestJavaProcessBuilder(
                                    "-cp", CLASSES.toString(),
+                                   "-Djava.security.manager=allow",
                                    "-Djdk.invoke.LambdaMetafactory.dumpProxyClassFiles",
                                    "com.example.TestLambda").directory(testDir.toFile());
             executeProcess(pb)
@@ -247,6 +253,7 @@ public class LogGeneratedClassesTest {
         Files.createFile(dumpDir.resolve("com/example/nonsense/nonsense"));
         ProcessBuilder pb = createLimitedTestJavaProcessBuilder(
                                "-cp", CLASSES.toString(),
+                               "-Djava.security.manager=allow",
                                "-Djdk.invoke.LambdaMetafactory.dumpProxyClassFiles",
                                longFQCN).directory(testDir.toFile());
         OutputAnalyzer outputAnalyzer = executeProcess(pb);
