@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2013, 2024, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2013, 2020, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -26,6 +26,15 @@ import java.lang.reflect.InvocationHandler;
 import java.lang.reflect.Method;
 import java.lang.reflect.Modifier;
 import java.lang.reflect.Proxy;
+import java.lang.reflect.ReflectPermission;
+import java.security.AccessControlException;
+import java.security.CodeSource;
+import java.security.Permission;
+import java.security.PermissionCollection;
+import java.security.Permissions;
+import java.security.Policy;
+import java.security.ProtectionDomain;
+import java.security.SecurityPermission;
 import java.util.*;
 
 /*
@@ -34,9 +43,12 @@ import java.util.*;
  * @summary Test proxy classes that implement non-public interface
  *
  * @build p.Foo
+ * @run main/othervm -Djava.security.manager=allow NonPublicProxyClass grant
+ * @run main/othervm -Djava.security.manager=allow NonPublicProxyClass deny
  * @run main/othervm NonPublicProxyClass
  */
 public class NonPublicProxyClass {
+    static final Policy DEFAULT_POLICY = Policy.getPolicy();
 
     public interface PublicInterface {
         void foo();
@@ -57,9 +69,22 @@ public class NonPublicProxyClass {
         NonPublicProxyClass test3 =
             new NonPublicProxyClass(null, zipConstantsClass);
 
+        if (args.length == 1) {
+            switch (args[0]) {
+                case "grant": Policy.setPolicy(new NewInstancePolicy(true));
+                              break;
+                case "deny" : Policy.setPolicy(new NewInstancePolicy(false));
+                              break;
+                default: throw new IllegalArgumentException(args[0]);
+            }
+            System.setSecurityManager(new SecurityManager());
+        }
+
         test1.run();
         test2.run();
         test3.run();
+        System.out.format("Test passed: security %s%n",
+            (args.length == 0 ? "manager not installed" : Policy.getPolicy()));
     }
 
     private final ClassLoader loader;
@@ -72,7 +97,23 @@ public class NonPublicProxyClass {
     }
 
     public void run() throws Exception {
-        proxyClass = Proxy.getProxyClass(loader, interfaces);
+        boolean hasAccess = loader != null || hasAccess();
+        try {
+            proxyClass = Proxy.getProxyClass(loader, interfaces);
+            if (!hasAccess) {
+                throw new RuntimeException("should have no permission to create proxy class");
+            }
+        } catch (AccessControlException e) {
+            if (hasAccess) {
+                throw e;
+            }
+            if (e.getPermission().getClass() != RuntimePermission.class ||
+                    !e.getPermission().getName().equals("getClassLoader")) {
+                throw e;
+            }
+            return;
+        }
+
         if (Modifier.isPublic(proxyClass.getModifiers())) {
             throw new RuntimeException(proxyClass + " must be non-public");
         }
@@ -80,11 +121,34 @@ public class NonPublicProxyClass {
         newInstanceFromConstructor(proxyClass);
     }
 
+    private boolean hasAccess() {
+        if (System.getSecurityManager() == null) {
+            return true;
+        }
+        NewInstancePolicy policy = NewInstancePolicy.class.cast(Policy.getPolicy());
+        return policy.grant;
+    }
+
+    private static final String NEW_PROXY_IN_PKG = "newProxyInPackage.";
     private void newProxyInstance() {
         // expect newProxyInstance to succeed if it's in the same runtime package
         int i = proxyClass.getName().lastIndexOf('.');
         String pkg = (i != -1) ? proxyClass.getName().substring(0, i) : "";
-        Proxy.newProxyInstance(loader, interfaces, handler);
+        boolean hasAccess = pkg.isEmpty() || hasAccess();
+        try {
+            Proxy.newProxyInstance(loader, interfaces, handler);
+            if (!hasAccess) {
+                throw new RuntimeException("ERROR: Proxy.newProxyInstance should fail " + proxyClass);
+            }
+        } catch (AccessControlException e) {
+            if (hasAccess) {
+                throw e;
+            }
+            if (e.getPermission().getClass() != ReflectPermission.class ||
+                    !e.getPermission().getName().equals(NEW_PROXY_IN_PKG + pkg)) {
+                throw e;
+            }
+        }
     }
 
     private void newInstanceFromConstructor(Class<?> proxyClass)
@@ -115,5 +179,40 @@ public class NonPublicProxyClass {
                 return null;
             }
         };
+    }
+
+    static class NewInstancePolicy extends Policy {
+        final PermissionCollection permissions = new Permissions();
+        final boolean grant;
+        NewInstancePolicy(boolean grant) {
+            this.grant = grant;
+            permissions.add(new SecurityPermission("getPolicy"));
+            if (grant) {
+                permissions.add(new RuntimePermission("getClassLoader"));
+                permissions.add(new ReflectPermission(NEW_PROXY_IN_PKG + "p"));
+                permissions.add(new ReflectPermission(NEW_PROXY_IN_PKG + "java.util.zip"));
+            }
+        }
+        public PermissionCollection getPermissions(ProtectionDomain domain) {
+            return permissions;
+        }
+
+        public PermissionCollection getPermissions(CodeSource codesource) {
+            return permissions;
+        }
+
+        public boolean implies(ProtectionDomain domain, Permission perm) {
+            return permissions.implies(perm) ||
+                    DEFAULT_POLICY.implies(domain, perm);
+        }
+
+        public String toString() {
+            StringBuilder sb = new StringBuilder("policy: ");
+            Enumeration<Permission> perms = permissions.elements();
+            while (perms.hasMoreElements()) {
+                sb.append("\n").append(perms.nextElement().toString());
+            }
+            return sb.toString();
+        }
     }
 }
