@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1999, 2024, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1999, 2017, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -34,8 +34,8 @@
  *          java.rmi/sun.rmi.server
  *          java.rmi/sun.rmi.transport
  *          java.rmi/sun.rmi.transport.tcp
- * @build TestLibrary Dummy RegistryVM RMIRegistryRunner TestLoaderHandler
- * @run main/othervm
+ * @build TestLibrary Dummy RegistryVM RMIRegistryRunner
+ * @run main/othervm/policy=security.policy
  *     -Djava.rmi.server.useCodebaseOnly=false ClassPathCodebase
  */
 
@@ -63,7 +63,8 @@ public class ClassPathCodebase {
 
         System.err.println("\nRegression test for bug 4242317\n");
 
-        System.setProperty("java.rmi.server.RMIClassLoaderSpi", "TestLoaderHandler");
+        TestLibrary.suggestSecurityManager("java.lang.SecurityManager");
+
         RegistryVM rmiregistry = null;
 
         try {
@@ -84,7 +85,7 @@ public class ClassPathCodebase {
             File rmiregistryDir =
                   new File(System.getProperty("user.dir", "."), importCodebase);
             rmiregistry = RegistryVM.createRegistryVMWithRunner("RMIRegistryRunner",
-                            " -Denv.class.path=."
+                            " -Denv.class.path=. -Djava.security.manager=allow"
                             + " -Djava.rmi.server.codebase=" + exportCodebaseURL
                             + " -Duser.dir=" + rmiregistryDir.getAbsolutePath());
             rmiregistry.start();
