@@ -32,6 +32,8 @@
  * @run build RMIAltAuthTest SimpleStandard SimpleStandardMBean
  *
  * @run main/othervm RMIAltAuthTest
+ * @run main/othervm -Djava.security.manager=allow RMIAltAuthTest
+ * @run main/othervm -Djava.security.manager=allow -DSimpleStandard.useGetSubjectACC=true RMIAltAuthTest
  */
 
 import java.io.File;
