@@ -30,7 +30,8 @@ import java.security.PrivilegedExceptionAction;
  * @test
  * @bug 8267108
  * @summary confirm current subject specification
- * @run main/othervm CurrentSubject
+ * @run main/othervm -Djava.security.manager=allow CurrentSubject
+ * @run main/othervm -Djava.security.manager=disallow CurrentSubject
  */
 public class CurrentSubject {
 
