@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2009, 2024, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2009, 2021, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -25,17 +25,20 @@
  * @test
  * @bug 6795356
  * @summary Checks that SwingLazyValue class works correctly
- * @run main TableTest
+ * @author Alexander Potochkin
+ * @run main/othervm -Djava.security.manager=allow TableTest
  */
 
-import java.awt.KeyboardFocusManager;
-import javax.swing.JTable;
+import javax.swing.*;
 import javax.swing.table.TableCellEditor;
+import java.awt.*;
 
 public class TableTest {
 
     public static void main(String[] args) throws Exception {
+
         KeyboardFocusManager.getCurrentKeyboardFocusManager();
+        System.setSecurityManager(new SecurityManager());
 
         JTable table = new JTable();
         TableCellEditor de = table.getDefaultEditor(Double.class);
@@ -44,3 +47,4 @@ public class TableTest {
         }
     }
 }
+
