@@ -62,6 +62,7 @@ import java.util.Set;
  * @library /test/lib
  *
  * @run main/othervm/timeout=300 RmiBootstrapTest .*_test.*.in
+ * @run main/othervm/timeout=300 -Djava.security.manager=allow RmiBootstrapTest .*_test.*.in
  * */
 
 /*
@@ -73,6 +74,7 @@ import java.util.Set;
  * @library /test/lib
  *
  * @run main/othervm/timeout=300 RmiBootstrapTest .*_ssltest.*.in
+ * @run main/othervm/timeout=300 -Djava.security.manager=allow RmiBootstrapTest .*_ssltest.*.in
  * */
 
 /**
