@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2011, 2024, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2011, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -24,7 +24,7 @@
 /* @test
    @bug 7040220 8054307
    @summary Test if StringCoding and NIO result have the same de/encoding result for UTF-8
- * @run main/othervm/timeout=2000 TestStringCodingUTF8
+ * @run main/othervm/timeout=2000 -Djava.security.manager=allow TestStringCodingUTF8
  * @key randomness
  */
 
@@ -34,6 +34,10 @@ import java.nio.charset.*;
 
 public class TestStringCodingUTF8 {
     public static void main(String[] args) throws Throwable {
+        test("UTF-8");
+        test("CESU-8");
+        // security manager on
+        System.setSecurityManager(new PermissiveSecurityManger());
         test("UTF-8");
         test("CESU-8");
     }
@@ -169,5 +173,9 @@ public class TestStringCodingUTF8 {
             throw new Error(x);
         }
         return Arrays.copyOf(ba, bb.position());
+    }
+
+    static class PermissiveSecurityManger extends SecurityManager {
+        @Override public void checkPermission(java.security.Permission p) {}
     }
 }
