@@ -30,6 +30,7 @@
  * @key randomness
  * @modules jdk.crypto.cryptoki
  * @run main/othervm TestRawRSACipher
+ * @run main/othervm -Djava.security.manager=allow TestRawRSACipher sm
  */
 
 import java.security.GeneralSecurityException;
